<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.junglesoft.magicball.activities.SettingActivity">

    <TextView
        android:id="@+id/comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:padding="10sp"
        android:textColor="@color/black"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/company"/>


    <TextView
        android:id="@+id/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:padding="10sp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/comp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/privacy"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to Home"
        android:textColor="@color/whtie"
        android:padding="10sp"
        android:layout_marginTop="10sp"
        android:layout_below="@id/privacy_policy"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10sp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Developer Email:  "
            android:textStyle="bold"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/email"/>
    </LinearLayout>

</RelativeLayout>
