<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/background"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.junglesoft.magicball.activities.MainActivity">


    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:layout_alignParentLeft="true" />

    <RelativeLayout
        android:layout_width="350sp"
        android:layout_height="300sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <RelativeLayout
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/circle_image"
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/zma_ball" />

            <TextView
                android:id="@+id/magicaball_Answer"
                android:layout_width="170sp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/shoot_me"
                android:paddingLeft="10sp"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                />

        </RelativeLayout>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="tap_on_mic"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="normal" />


        <ImageView
            android:id="@+id/iv_speech"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="23dp"
            android:src="@drawable/microphone" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <com.google.android.gms.ads.AdView

            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            android:layout_marginBottom="5sp"
            ads:adUnitId="@string/banner_ad_unit_id">

        </com.google.android.gms.ads.AdView>



    </RelativeLayout>




</LinearLayout>
